--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
 
+    compile 'com.facebook.stetho:stetho:1.4.2'
+
     testCompile 'junit:junit:4.12'
 }
