--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
 
+    annotationProcessor 'com.github.gfx.android.orma:orma-processor:4.1.1'
+    compile 'com.github.gfx.android.orma:orma:4.1.1'
+
     compile 'com.facebook.stetho:stetho:1.4.2'
 
     testCompile 'junit:junit:4.12'
